Renaming a collection across databases no longer batches writes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: 4.9.0
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-05-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Due to changes in SERVER-48771, renaming a collection across databases no longer batches writes, and instead copies documents one-by-one. This is a regression from SERVER-36510, which did not explicitly state this as a change in the ticket, but allowed rename to batch writes.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: