SERVER-55394 improve invariants in renameBetweenDBs()